@@ -1,0 +1,5 @@
+originalEnumClass=java.lang.Enum
+pretranslatedEnumClass=net.sf.retrotranslator.runtime.java.lang.Enum_
+stringClass=java.lang.String
+originalEnumClassXml=<name>java.lang.Enum</name>
+originalEnumClassSpaces=<name> java.lang.Enum </name>
